# SimpleEngine

./: CMakeLists.txt  config.txt  main.cpp
core/: Engine.cpp  Engine.h
core/components/: GameObject.cpp  GameObject.h  IDamageable.hpp  IInputable.hpp  IInputtable.hpp  Player.cpp  Player.hpp
core/entities/: AIBasicMovement.hpp  Collider.hpp  Entity.cpp  Entity.h  Player.cpp  Player.hpp  Projectile.hpp  TestObject.cpp  TestObject.hpp
core/events/: KeyDown.hpp  KeyLeft.hpp  KeyRight.hpp  KeyUp.hpp  NoInput.hpp
core/state/: IntroState.hpp  PlayState.cpp  PlayState.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
core/systems/: AiSystem.cpp  AiSystem.hpp  BaseSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  GameTimeSystem.hpp  InputSystem.cpp  InputSystem.hpp  MoveSystem.cpp  MoveSystem.h  RenderSystem.cpp  RenderSystem.h
core/types/: CollisionLayer.hpp  ObjectFlags.hpp
core/utils/: ConfigReader.hpp
